2001-04-18  Andreas Jaeger  <aj@suse.de>

	* rt/Makefile (otherlibs): Added.

2001-04-02  Andreas Schwab  <schwab@suse.de>

	* Makerules (build-module): Make sure exit codes get checked
	properly and remove unnecessary slashes.

2001-04-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/get_clockfreq.c (__get_clockfreq):
	Handle kernels which report only three digits after the decimal point.
	Reported by Van Okamura <van.okamura@oracle.com>.

	* sysdeps/alpha/fpu/libm-test-ulps: Adjust error values for atan2f.

2001-04-17  David S. Miller  <davem@redhat.com>

	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: Update for new atan2 tests.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Likewise.

2001-04-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ieee754/ldbl-128/e_logl.c (__ieee754_logl): Make sure
	desired exceptions are raised for exceptional values.
	* math/libm-test.inc (acosh_test, atan_test, atan2_test, cacos_test,
	cacosh_test, casin_test, casinh_test, catan_test, catanh_test,
	clog_test, log_test, log1p_test, tan_test): Increase precision of
	expected values to satisfy ldbl-128.
	* sysdeps/alpha/fpu/libm-test-ulps: Adjust accordingly.
	* sysdeps/arm/libm-test-ulps: Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Likewise.
	* sysdeps/ia64/fpu/libm-test-ulps: Likewise.
	* sysdeps/m68k/fpu/libm-test-ulps: Likewise.
	* sysdeps/mips/fpu/libm-test-ulps: Likewise.
	* sysdeps/powerpc/fpu/libm-test-ulps: Likewise.
	* sysdeps/s390/fpu/libm-test-ulps: Likewise.
	* sysdeps/sh/sh4/fpu/libm-test-ulps: Likewise.
	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: Likewise.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Likewise.

2001-04-17  Andreas Jaeger  <aj@suse.de>

	* configure.in: Move test for critical programs up.

2001-04-16  Stephen L Moshier  <moshier@mediaone.net>

	* sysdeps/ieee754/flt-32/e_asinf.c (pio2_hi, pio2_lo, pio4_hi):
	Correct the values. (pSx, qSx): Replace by shorter approximation.
	Use f suffix on float constants.
