@@ -1,6 +1,8 @@
 2001-04-18  Andreas Jaeger  <aj@suse.de>
 
-	* rt/Makefile (otherlibs): Added.
+        * rt/Makefile (otherlibs): Added.
+
+        * glibcbug.in (BUGGLIBC): Send to new alias.
 
 2001-04-02  Andreas Schwab  <schwab@suse.de>
 
